feat: add GetUserPermissions functionality to retrieve user permissions
